[workspace]
members = [
    "crates/core",
    "crates/stations",
    "crates/measurements",
    "crates/orbit",
    "crates/utils",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Wouittone"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Wouittone/orskit"
