[package]
name = "orbit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Orbital propagation and mechanics for orskit"

[dependencies]
nalgebra = "0.34"
ode-solvers = "0.6"
hifitime = "4.1"
core = { path = "../core" }
